--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 
         <dependency>
             <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>2.1.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-distributed</artifactId>
             <version>2.1.13</version>
         </dependency>
